assets/css/style.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

html {
  height: 100vh;
}

.logo {
  font-weight: 700;
  font-family: 'Prompt', sans-serif;
  font-size: xx-large;
}

nav, ul {
  align-items: center;
}

nav {
  background: transparent;
  height: 80px;
  display: flex;
  justify-content: space-between;
  padding-left: 100px;
  padding-right: 100px;
  position: absolute;
  width: 100%;
}

ul {
  display: flex;
  justify-content: flex-end;
}

nav ul li {
  font-size: 1.3rem;
  font-family: 'Montserrat', sans-serif;
  list-style-type: none;
  padding: 25px
}

nav ul li a {
  text-decoration: none;
  color: #121c40;
}

nav ul li a:hover {
  color: yellowgreen;
}

.sticky {
  position: fixed;
  top: 0;
  width: 100%;
}

main {
  width:100%;
}


#mountain {
  width: 100%;
  background-image: url("../Images/rainier.jpg");
  height: 100vh;
  /* Set a specific height */
  min-height: 700px;
  /* Create the parallax scrolling effect */
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

#hi {
  background: transparent;
  position:absolute;
  transform: translate(45vw, 35vh);
  font-family: 'Prompt', sans-serif;
  font-size: 72px;
}

#secondSection {
  border-top:5px, black, solid;
  background-image: url('../Images/trees.jpg');
  width: 100%;
  height: 100vh;
  /* Set a specific height */
  min-height: 700px;
  /* Create the parallax scrolling effect */
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: relative;
  background-color: black;
  display: flex;
  align-items: center;
  font-family: 'Prompt', sans-serif;
  flex-direction: flex-row;
  justify-content: space-around;
} 

.tree {
  background-attachment: fixed;
}

#about-me {
  margin-top: 50px;
  display: flex;
  font-family: 'Lato', sans-serif;
  font-weight: light;
  flex-direction: column;
  align-items: center;
  margin-bottom: 25px;
  text-shadow: 1px 1px 2px white;
}

#about-me p {
  font-weight: 300;
  font-size: larger;
}

#me {
  background-image: url(../Images/me.jpg);
  background-position: center;
  background-size: contain ;
  border-radius: 50%;
  width: 250px;
  height:250px;
}








@media only screen and (max-width: 768px) {
  nav {
      padding: unset !important
  }
}

@media only screen and (max-width: 576px) {
  nav,
  nav ul {
      height: auto;
      display: flex;
      flex-flow: column wrap;
  }
  nav ul li {
      width: 100%;
  }
  nav ul li a {
      width: 100%;
      display: flex;
      align-items: center;
      justify-content: center;
      width: 100%;
      height: 50px;
  }
  nav ul li a:hover {
      color: #121c40;
      background-color: yellowgreen;
  }
}

